--- a/index.css
+++ b/index.css
@@ -33,20 +33,24 @@ header{
 }
 .icons{
 	float:right;
-	line-height:64px;
+	line-height:50px;
 	vertical-align:center;
-	margin:12px 36px 0 0;
+	margin:0 36px 0 0;
 }
 .icons li{
 	list-style-type:none;
 	float:left;
-	margin:0 0 0 30px;
+	padding:12px 22px 0 22px;
+}
+.phone:hover,.bell:hover,.letter:hover{
+	background-color:#363c41;
 }
 .icons2{
 	float:right;
 	line-height:64px;
 	vertical-align:center;
 	margin:32px 153px 0 0;
+	position:relative;
 }
 .icons2 li{
 	list-style-type:none;
@@ -60,10 +64,10 @@ header{
 	list-style-type:none;
 	float:left;
 	margin:0 34px 0 0px;
+	cursor:pointer;
 	color:#666;
 }
-.options2 li{
-	cursor:pointer;
+.options2 li:hover{
 	color:white;
 }
 .options2{
@@ -181,4 +185,27 @@ p{
 }
 .copyright{
 	color:#787d82;
+}
+#downloadlink{
+	position:absolute;
+	right:153px;
+	display:none;
+	border-right:1px solid #ccc;
+	border-left:1px solid #ccc;
+	border-bottom:1px solid #ccc;
+}
+.phone:hover #downloadlink{
+	display:block;
+}
+#bottomlink{
+	position:absolute;
+	top:-227px;
+	right:65px;
+	display:none;
+}
+.weixin:hover #bottomlink{
+	display:block;
+}
+.hot{
+	color:#8d9191;
 }
